kustomize/vaultwarden/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vaultwarden
  labels:
    app.kubernetes.io/name: vaultwarden
